--- a/css/main.css
+++ b/css/main.css
@@ -11,14 +11,8 @@
   box-sizing: border-box;
 }
 
-body {
-  margin: 0 auto;
-  font-size: 16px;
-  line-height: 1.71429;
-}
-
-img {
-  vertical-align: middle;
+footer{
+  bottom: 10px;
 }
 
 .container {
@@ -56,18 +50,63 @@ img {
   margin: 0px;
 }
 
-a {
-  color: #373B47;
-  text-decoration: none;
-}
-
-a:hover {
-  color: #E95853;
-}
-
 .text-uppercase {
   text-transform: uppercase;
 }
 
 /*ESCRIBE TU CÓDIGO DESDE AQUÍ*/
 
+body {
+  margin: 0 auto;
+  font-size: 16px;
+}
+
+.one{
+position: absolute;
+top: -1px;
+right: 50px;
+
+}
+
+ul{
+ margin: 20px;
+ padding: 10px;
+ overflow: hidden;
+ background-color:#ffffff;
+}
+
+ul li{
+  float: left;
+}
+
+li a {
+  color: #000000;
+  text-decoration: none;
+}
+
+li a:hover {
+  color: #E95853;
+}
+
+#ajust {
+  text-align: center;
+  color: #ffffff;
+  height: 400px;
+  background-image: url(../assets/images/bg-home.jpg);
+}
+
+#pink{
+  text-align: center;
+  color: #ffffff;
+  background-color: #f17c72;
+}
+
+#picture-one{
+position: relative;
+
+}
+
+#picture-two{
+  text-align: center;
+  color: #191919;
+}
